--- a/package.json
+++ b/package.json
@@ -17,15 +17,24 @@
     "axios": "^0.16.2",
     "bulma": "^0.5.1",
     "font-awesome": "^4.7.0",
+    "jquery-ui": "^1.12.1",
+    "jquery-ui-css": "^1.11.4",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
+    "moment": "^2.18.1",
     "numeral": "^2.0.6",
     "vue": "^2.3.3",
     "vue-axios": "^2.0.2",
+    "vue-datepicker": "^1.3.0",
+    "vue-masked-input": "^0.5.2",
     "vue-material": "^0.7.4",
+    "vue-material-datepicker": "^2.0.1",
     "vue-material-design-icons": "^0.7.1",
-    "vue-router": "^2.6.0"
+    "vue-router": "^2.6.0",
+    "vue-the-mask": "^0.11.0-alpha.2",
+    "vuejs-date-picker": "^1.0.1",
+    "vuejs-datepicker": "^0.9.9"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
