--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-material-design-icons": "^0.7.1",
     "vue-router": "^2.6.0",
     "vue-the-mask": "^0.11.0-alpha.2",
+    "vue-touchjs": "0.0.9",
     "vuejs-date-picker": "^1.0.1",
     "vuejs-datepicker": "^0.9.9"
   },
