--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "material-icons": "^0.1.0",
     "moment": "^2.18.1",
     "numeral": "^2.0.6",
+    "sweetalert": "^1.1.3",
     "vue": "^2.3.3",
     "vue-axios": "^2.0.2",
     "vue-datepicker": "^1.3.0",
@@ -31,7 +32,9 @@
     "vue-material": "^0.7.4",
     "vue-material-datepicker": "^2.0.1",
     "vue-material-design-icons": "^0.7.1",
+    "vue-msgbox": "^0.2.14",
     "vue-router": "^2.6.0",
+    "vue-sweetalert": "^0.1.18",
     "vue-the-mask": "^0.11.0-alpha.2",
     "vue-touchjs": "0.0.9",
     "vuejs-date-picker": "^1.0.1",
