--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue": "^2.3.3",
     "vue-axios": "^2.0.2",
     "vue-datepicker": "^1.3.0",
+    "vue-gesture": "^1.0.8",
     "vue-masked-input": "^0.5.2",
     "vue-material": "^0.7.4",
     "vue-material-datepicker": "^2.0.1",
@@ -37,6 +38,7 @@
     "vue-sweetalert": "^0.1.18",
     "vue-the-mask": "^0.11.0-alpha.2",
     "vue-touchjs": "0.0.9",
+    "vue2-touch-events": "^0.2.1",
     "vuejs-date-picker": "^1.0.1",
     "vuejs-datepicker": "^0.9.9"
   },
