--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bulma": "^0.5.1",
+    "child_process": "^1.0.2",
     "font-awesome": "^4.7.0",
+    "fs": "0.0.1-security",
+    "grunt": "^1.0.1",
+    "imports-loader": "^0.7.1",
     "jquery-ui": "^1.12.1",
     "jquery-ui-css": "^1.11.4",
+    "load-grunt-config": "^0.19.2",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^3.0.3",
     "material-icons": "^0.1.0",
+    "module": "^1.2.5",
     "moment": "^2.18.1",
     "numeral": "^2.0.6",
     "sweetalert": "^1.1.3",
@@ -29,6 +35,7 @@
     "vue-axios": "^2.0.2",
     "vue-datepicker": "^1.3.0",
     "vue-gesture": "^1.0.8",
+    "vue-longpress": "^1.0.1",
     "vue-masked-input": "^0.5.2",
     "vue-material": "^0.7.4",
     "vue-material-datepicker": "^2.0.1",
@@ -37,6 +44,8 @@
     "vue-router": "^2.6.0",
     "vue-sweetalert": "^0.1.18",
     "vue-the-mask": "^0.11.0-alpha.2",
+    "vue-touch": "^2.0.0-beta.4",
+    "vue-touch-events": "^1.0.3",
     "vue-touchjs": "0.0.9",
     "vue2-touch-events": "^0.2.1",
     "vuejs-date-picker": "^1.0.1",
@@ -77,6 +86,7 @@
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
     "jquery": "^3.2.1",
+    "jquery-mobile": "^1.5.0-alpha.1",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
